# CheckAuroa-Qt5-Client

./: .gitignore  CMakeLists.txt  CheckAurora.pro  README.md  papyros-calculator.pro
libs/client/: SWGError.cpp  SWGError.h  SWGGeomagnaticLocation.h  SWGHelpers.cpp  SWGHelpers.h  SWGKPIndexApi.h  SWGKpInformation.cpp  SWGKpInformation.h  SWGLocation.cpp  SWGLocation.h  SWGLocationApi.cpp  SWGLocationApi.h  SWGNotification.cpp  SWGNotifyApi.h  SWGRating.cpp  SWGRating.h  SWGRatingsApi.cpp  SWGRatingsApi.h  SWGWeatherApi.cpp  SWGWeatherApi.h  SWGWeatherInformation.cpp  SWGWeatherInformation.h
src/: CurrentRatingManager.cpp  CurrentRatingManager.h  CurrentWeatherManager.cpp  CurrentWeatherManager.h  Facade.cpp  Facade.h  KPValueQMLData.cpp  KpValueManager.cpp  KpValueManager.h  KpValueQmlData.cpp  RatingQmlData.cpp  RatingQmlData.h  RatingsManager.h  currentweathermanager.h  main.cpp  message.cpp  message.h  papyros-calculator.qrc  resources.qrc  weatherqmldata.cpp  weatherqmldata.h
src/client/: SWGGeomagnaticLocation.cpp  SWGHelpers.cpp  SWGKPIndexApi.cpp  SWGLocationApi.h  SWGModelFactory.h  SWGNotification.h  SWGNotifyApi.cpp  SWGOK.cpp  SWGOK.h  SWGRatingsApi.cpp  SWGRatingsApi.h  testclass.cpp  testclass.h
src/qml/: CurrentRatingBigCard.qml  CurrentWeatherBigCard.qml  KpValueChart.qml  Overview.qml  OverviewPage.qml  PageStackDemo.qml  RatingsChartCard.qml  SearchByCity.qml  main.qml
src/qml/charts/: QChart.js  QChart.qml
src/qmlData/: KpValueQmlData.cpp  KpValueQmlData.h  RatingQmlData.h  weatherqmldata.cpp
src/qmlManager/: CurrentRatingManager.cpp  CurrentRatingManager.h  CurrentWeatherManager.h  KpValueManager.cpp  KpValueManager.h  RatingsManager.cpp  RatingsManager.h
tests/: tst_material
